<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>edu.hm.hafner</groupId>
    <artifactId>codingstyle-pom</artifactId>
    <version>6.1.0</version>
    <relativePath />
  </parent>

  <groupId>edu.hm.hafner</groupId>
  <artifactId>autograding-model</artifactId>
  <version>10.4.0-SNAPSHOT</version>
  <name>Autograding Model</name>

  <description>This module autogrades Java projects based on a configurable set of metrics.</description>

  <url>https://cs.hm.edu/~hafner</url>

  <licenses>
    <license>
      <name>MIT license</name>
      <comments>All source code is under the MIT license.</comments>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>uhafner</id>
      <name>Ullrich Hafner</name>
      <email>ullrich.hafner@hm.edu</email>
      <organization>Munich University of Applied Sciences</organization>
      <organizationUrl>https://www.hm.edu/en/index.en.html</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/uhafner/autograding-model.git</connection>
    <developerConnection>scm:git:git@github.com:uhafner/autograding-model.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/uhafner/autograding-model</url>
  </scm>

  <properties>
    <module.name>${project.groupId}.autograding</module.name>

    <java.version>21</java.version>

    <jackson-databind.version>2.20.1</jackson-databind.version>
    <analysis-model.version>13.18.0</analysis-model.version>
    <coverage-model.version>0.65.0</coverage-model.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>edu.hm.hafner</groupId>
      <artifactId>analysis-model</artifactId>
      <version>${analysis-model.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.google.errorprone</groupId>
          <artifactId>error_prone_annotations</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-annotations</artifactId>
        </exclusion>
        <exclusion>
          <groupId>edu.hm.hafner</groupId>
          <artifactId>codingstyle</artifactId>
        </exclusion>
        <exclusion>
          <groupId>one.util</groupId>
          <artifactId>streamex</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>edu.hm.hafner</groupId>
      <artifactId>coverage-model</artifactId>
      <version>${coverage-model.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.google.errorprone</groupId>
          <artifactId>error_prone_annotations</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-io</groupId>
          <artifactId>commons-io</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-annotations</artifactId>
        </exclusion>
        <exclusion>
          <groupId>edu.hm.hafner</groupId>
          <artifactId>codingstyle</artifactId>
        </exclusion>
        <exclusion>
          <groupId>one.util</groupId>
          <artifactId>streamex</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.6.1</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <argLine>--add-opens java.base/java.util=ALL-UNNAMED
            --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
            <configuration>
              <includes>
                <include>**/*Assert*</include>
              </includes>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
        <configuration>
          <packages combine.children="append">
            <package>edu.hm.hafner.grading</package>
          </packages>
          <excludes>
            <exclude>.*\.Score</exclude>
            <exclude>.*\.Supplier</exclude>
            <exclude>.*\.JacksonFacade</exclude>
            <exclude>.*Builder</exclude>
          </excludes>
          <entryPointClassPackage>edu.hm.hafner.grading.assertions</entryPointClassPackage>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.revapi</groupId>
        <artifactId>revapi-maven-plugin</artifactId>
        <configuration>
          <analysisConfiguration>
            <revapi.differences id="manually-vetted">
              <attachments>
                <vetted>ok</vetted>
              </attachments>
              <differences combine.children="append">
                <item>
                  <ignore>true</ignore>
                  <regex>true</regex>
                  <code>java.*</code>
                  <newArchive>com.fasterxml.jackson.core:jackson-databind:jar.*</newArchive>
                  <justification>Jackson is not actually exposed as API</justification>
                </item>
                <item>
                  <ignore>true</ignore>
                  <regex>true</regex>
                  <code>java.field.enumConstantOrderChanged</code>
                  <classQualifiedName>edu.hm.hafner.coverage.Metric</classQualifiedName>
                  <justification>Order of enums will continously evolve</justification>
                </item>
              </differences>
            </revapi.differences>
          </analysisConfiguration>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
